--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,14 +1,10 @@
 name: "aFib_heart_atlas_paper"
 output_dir: ../docs
 navbar:
-  title: "aFib_heart_atlas_paper"
+  title: "aFib heart atlas paper"
   left:
   - text: Home
     href: index.html
-  - text: About
-    href: about.html
-  - text: License
-    href: license.html
 output:
   workflowr::wflow_html:
     toc: yes
